corrected faile alignments

--- a/style.css
+++ b/style.css
@@ -755,6 +755,7 @@ h1 {
   color: #fff;
   text-align: center;
   margin-top: 2em;
+  padding-top: 0;
 }
 
 .contact_para {
@@ -942,6 +943,10 @@ textarea::placeholder {
     display: none;
   }
 
+  .exit {
+    display: none;
+  }
+
   .main {
     padding-left: 260px;
     padding-right: 260px;
@@ -1081,8 +1086,8 @@ textarea::placeholder {
   }
 
   .text_about {
-    width: 100%;
-    height: 114px;
+    width: 100%; padding-top: 0;
+    height: 114px;border: 2px solid red;
   }
 
   .text_parag {
